# CarLudGine

./: CMakeLists.txt  README.md
include/modules/ncurses_OOP/: Config.hpp  CreateBasicBox.hpp  InterfaceBasicBox.hpp  InterfaceWindow.hpp  Output.hpp  Screen.hpp  Window.hpp
src/: main.cpp
src/modules/: CMakeLists.txt
src/modules/ncurses_OOP/: CMakeLists.txt  Screen.cpp  Window.cpp
